# CTG_QIS_Hackathon_sp2025

./: .gitignore  LICENSE  README.md  backtest_plotter.py  backtester_prices.csv  mean_reversion_strategy_insights.csv  momentum_strategy_insights.csv  pyproject.toml  quant_strategy_example.ipynb  quant_strategy_framework.py  requirements.txt  strategies.py
outputs/: momentum_strategy_insights.csv
